# python-project-template

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python.yml
package_template/: __main__.py
